// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows commas 1`] = `
EmalNumber {
  "decimalPlace": 2n,
  "isNegative": false,
  "rawInt": 52073n,
}
`;

exports[`tokenizes numbers 1`] = `
EmalNumber {
  "decimalPlace": 2n,
  "isNegative": false,
  "rawInt": 944n,
}
`;

exports[`tokenizes numbers 2`] = `
EmalNumber {
  "decimalPlace": 8n,
  "isNegative": false,
  "rawInt": 456n,
}
`;

exports[`tokenizes numbers 3`] = `
EmalNumber {
  "decimalPlace": 4n,
  "isNegative": true,
  "rawInt": -45n,
}
`;
